// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Select default 1`] = `
<div
  class="arco-select arco-select-single arco-select-size-default"
  tabindex="0"
>
  <div
    class="arco-select-view"
    title=""
  >
    <input
      autocomplete="off"
      class="arco-select-view-input"
      style="width:100%;pointer-events:none"
      tabindex="-1"
      value=""
    />
    <span
      class="arco-select-view-value arco-select-hidden"
    />
    <div
      class="arco-select-suffix"
    >
      <div
        class="arco-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-down"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Select set className globally 1`] = `
<div
  class="arco-select arco-select-single arco-select-size-default global-default-class"
  tabindex="0"
>
  <div
    class="arco-select-view"
    title=""
  >
    <input
      autocomplete="off"
      class="arco-select-view-input"
      style="width:100%;pointer-events:none"
      tabindex="-1"
      value=""
    />
    <span
      class="arco-select-view-value arco-select-hidden"
    />
    <div
      class="arco-select-suffix"
    >
      <div
        class="arco-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-down"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigProvider componentConfig.Select set className globally and component set className itself. 1`] = `
<div
  class="arco-select arco-select-single arco-select-size-default component-class"
  tabindex="0"
>
  <div
    class="arco-select-view"
    title=""
  >
    <input
      autocomplete="off"
      class="arco-select-view-input"
      style="width:100%;pointer-events:none"
      tabindex="-1"
      value=""
    />
    <span
      class="arco-select-view-value arco-select-hidden"
    />
    <div
      class="arco-select-suffix"
    >
      <div
        class="arco-select-arrow-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-down"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M39.6 17.443 24.043 33 8.487 17.443"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
